fix fatel err0R